--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ClubHunting</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_radar">RadarActivity</string>
+    <string name="title_activity_details">DetailsActivity</string>
 </resources>
